[lworld] C2's slow path allocation does not set the larval bit

XMLWordPrintable

      # Internal Error (/oracle/valhalla1/open/src/hotspot/share/prims/unsafe.cpp:238), pid=21507, tid=21508
      # assert(!_obj->is_value() || _obj->mark().is_larval_state()) failed: must be an object instance or a larval value

      V [libjvm.so+0x17b4a8e] Unsafe_PutInt+0x26e
      j jdk.internal.misc.Unsafe.putInt(Ljava/lang/Object;JI)V+0 java.base
      j compiler.valhalla.valuetypes.TestIntrinsics.test56_callee(Qcompiler/valhalla/valuetypes/MyValue1;)V+10
      J 456 c2 compiler.valhalla.valuetypes.TestIntrinsics.test56(Qcompiler/valhalla/valuetypes/MyValue1;)Qcompiler/valhalla/valuetypes/MyValue1; (29 bytes) @ 0x00007f7b78b2ee5c [0x00007f7b78b2ea40+0x000000000000041c]
      j compiler.valhalla.valuetypes.TestIntrinsics.test56_verifier(Z)V+18
      j jdk.internal.reflect.GeneratedMethodAccessor45.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+63
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+785
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
      j compiler.valhalla.valuetypes.TestIntrinsics.main([Ljava/lang/String;)V+29

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: