8238869: [lworld] C2's slow path allocation does not set the larval bit

Reviewed-by: roland