src/hotspot/share/opto/runtime.hpp
@@ -155,7 +155,7 @@ class OptoRuntime : public AllStatic {
   // =================================
 
   // Allocate storage for a Java instance.
-  static void new_instance_C(Klass* instance_klass, JavaThread *thread);
+  static void new_instance_C(Klass* instance_klass, bool is_larval, JavaThread* thread);
 
   // Allocate storage for a objArray or typeArray
   static void new_array_C(Klass* array_klass, int len, JavaThread *thread);
